constraints/general-block-endpoint-edit-default-role-samples-block-endpoint-edit-default-role-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockEndpointEditDefaultRole
metadata: # kpt-merge: /block-endpoint-edit-default-role
  name: block-endpoint-edit-default-role
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: ["rbac.authorization.k8s.io"]
        kinds: ["ClusterRole"]
